CFLAGS = --pedantic -Wall -srd=c99 -O2 -I/usr/local/include/opencv -I/usr/local/include/opencv2 -L/usr/local/lib/ -lopencv_core -lopencv_imgproc -lopencv_highgui -lopencv_ml -lopencv_video -lopencv_features2d -lopencv_calib3d -lopencv_objdetect -lopencv_contrib -lopencv_legacy -lopencv_stitching
LDFLAGS = -Im -L/usr/local/lib

bin_PROGRAMS = streetRating
streetRating_SOURCES = road_detection.cpp
